WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
32355
Assertion failure when opening a WebSocket connection
https://bugs.webkit.org/show_bug.cgi?id=32355
Summary
Assertion failure when opening a WebSocket connection
Alexey Proskuryakov
Reported
2009-12-09 16:54:44 PST
In SocketStreamHandle::readStreamCallback, ASSERT(m_state == Open); This happens because the stream can be unprepared to sending data yet (e.g. if read stream open callback arrived before the write one) and WebSocketChannel mistakenly treats zero return from platformSend() as an error - even though it just means that data was queued for later sending. So, the channel closes and destroys the handle.
Attachments
proposed fix
(3.14 KB, patch)
2009-12-09 17:00 PST
,
Alexey Proskuryakov
oliver
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Alexey Proskuryakov
Comment 1
2009-12-09 17:00:05 PST
Created
attachment 44582
[details]
proposed fix
WebKit Review Bot
Comment 2
2009-12-09 17:02:41 PST
style-queue ran check-webkit-style on
attachment 44582
[details]
without any errors.
David Levin
Comment 3
2009-12-09 18:00:24 PST
Just fyi, typo in changelog: s/zero if returned/zero is returned/
Oliver Hunt
Comment 4
2009-12-09 19:02:46 PST
Comment on
attachment 44582
[details]
proposed fix r=me
Alexey Proskuryakov
Comment 5
2009-12-09 19:30:46 PST
Committed revision 51934.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug