        Reviewed by Oliver Hunt.

https://bugs.webkit.org/show_bug.cgi?id=32355
        Assertion failure when opening a WebSocket connection

        I couldn't make a reliable test for this. Once the test from bug 32299 is landed, it
        will provide partial coverage, as I was frequently seeing the assertion failure with it.

        * platform/network/SocketStreamHandleBase.cpp: (WebCore::SocketStreamHandleBase::send):
        It's not an error if zero if returned from platformSend() - it just means that nothing could
        be pushed down to the network layer, and all data was queued for later.
        * platform/network/cf/SocketStreamHandleCFNet.cpp:
        (WebCore::SocketStreamHandle::readStreamCallback): This will no longer happen with SocketStream,
        but a client can potentially destroy the handle from any callback, so we need to check that
        this didn't happen.
        (WebCore::SocketStreamHandle::writeStreamCallback): Ditto.



Canonical link: https://commits.webkit.org/43359@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@51934 268f45cc-cd09-0410-ab3c-d52691b4dbfc